--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -497,12 +497,14 @@ jobs:
             # Create a temp dir on the R: ramdisk drive for Windows. The default
             # C: drive is extremely slow: https://github.com/actions/runner-images/issues/8755
             mkdir -p "R:/temp/embedded-pg"
-            go run scripts/embedded-pg/main.go -path "R:/temp/embedded-pg"
+            mkdir -p "C:/temp/embedded-pg-cache"
+            go run scripts/embedded-pg/main.go -path "R:/temp/embedded-pg" -cache "C:/temp/embedded-pg-cache"
           elif [ "${{ runner.os }}" == "macOS" ]; then
             # Postgres runs faster on a ramdisk on macOS too
             mkdir -p /tmp/tmpfs
+            mkdir -p /tmp/embedded-pg-cache
             sudo mount_tmpfs -o noowners -s 8g /tmp/tmpfs
-            go run scripts/embedded-pg/main.go -path /tmp/tmpfs/embedded-pg
+            go run scripts/embedded-pg/main.go -path /tmp/tmpfs/embedded-pg -cache /tmp/embedded-pg-cache
           elif [ "${{ runner.os }}" == "Linux" ]; then
             make test-postgres-docker
           fi
@@ -570,6 +572,12 @@ jobs:
         uses: ./.github/actions/test-cache/upload
         with:
           cache-key: ${{ steps.download-cache.outputs.cache-key }}
+
+      - name: Upload Embedded Postgres Cache
+        uses: ./.github/actions/embedded-pg-cache
+        with:
+          cache-key: ${{ steps.download-cache.outputs.cache-key }}
+          cache-path: ${{ runner.os == 'Windows' ? 'C:/temp/embedded-pg-cache' : '/tmp/embedded-pg-cache' }}
 
       - name: Upload test stats to Datadog
         timeout-minutes: 1
