--- a/.github/actions/embedded-pg-cache/upload/action.yml
+++ b/.github/actions/embedded-pg-cache/upload/action.yml
@@ -11,7 +11,7 @@ runs:
   using: "composite"
   steps:
     - name: Upload Embedded Postgres cache
-      if: true # ${{ github.ref == 'refs/heads/main' }}
+      if: ${{ github.ref == 'refs/heads/main' }}
       uses: actions/cache/save@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
       with:
         path: ${{ inputs.cache-path }}
