--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -602,13 +602,18 @@
 								},
 								{
 									"title": "Configure a template for dev containers",
-									"description": "How to use configure your template for dev containers",
+									"description": "How to configure your template for dev containers",
 									"path": "./admin/templates/extending-templates/devcontainers.md",
 									"children": [
 										{
 											"title": "Advanced dev container configurations",
 											"description": "Enhance your dev container configurations with multiple containers, repo selection, monitoring, and more.",
 											"path": "./admin/templates/extending-templates/advanced-dev-containers.md"
+										},
+										{
+											"title": "Choose an approach to Dev Containers in Coder",
+											"description": "How to choose the right Dev Container integration.",
+											"path": "./admin/templates/extending-templates/dev-containers-envbuilder.md"
 										}
 									]
 								},
